Pass 1: Java virtual threads, fix more concurrency issues, better multi-thread handling